Add more url's to package.xml's
Adding these additional repository and bugtracker url's such that they
will appear in wiki.ros.org/zivid_camera, index.ros.org/p/zivid_camera,
and index.ros.org/p/zivid_samples.

--- a/zivid_samples/package.xml
+++ b/zivid_samples/package.xml
@@ -6,6 +6,9 @@
   use of the zivid_camera package.</description>
   <maintainer email="support@zivid.com">Zivid</maintainer>
   <license>BSD3</license>
+  <url type="website>">https://zivid.com</url>
+  <url type="repository">https://github.com/zivid/zivid-ros</url>
+  <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
