--- a/zivid_camera/package.xml
+++ b/zivid_camera/package.xml
@@ -5,7 +5,9 @@
   <description>Driver for using the Zivid 3D cameras in ROS.</description>
   <maintainer email="support@zivid.com">Zivid</maintainer>
   <license>BSD3</license>
-  <url type="website>">http://zivid.com</url>
+  <url type="website>">https://zivid.com</url>
+  <url type="repository">https://github.com/zivid/zivid-ros</url>
+  <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>
   <author email="support@zivid.com">Zivid</author>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
