Add support for 2D capture
Add a new service, capture_2d which triggers 2D capture and publishes the
result on the color/image_color topic.

Configuration of 2D settings is done similar to 3D captures, using
dynamic_reconfigure. The 2D settings are at /capture_2d/frame_0. 2D HDR
(multiple frames) is not something the SDK supports currently, but the API
is designed to support it in the future by adding more
/capture_2d/frame_<n> nodes.

C++ and Python samples are also added.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -56,10 +56,13 @@ add_custom_target(
   COMMAND ${SETTINGS_GENERATOR_TARGET_NAME}
   COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/CaptureFrame.cfg
   COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/CaptureGeneral.cfg
+  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Capture2DFrame.cfg
   BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/CaptureFrame.cfg
              ${CMAKE_CURRENT_BINARY_DIR}/CaptureGeneral.cfg
+             ${CMAKE_CURRENT_BINARY_DIR}/Capture2DFrame.cfg
              ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/CaptureFrameConfigUtils.h
              ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/CaptureGeneralConfigUtils.h
+             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/Capture2DFrameConfigUtils.h
   COMMENT "Running generator"
 )
 
@@ -68,6 +71,7 @@ set(LIBRARY_NAME ${PROJECT_NAME})
 generate_dynamic_reconfigure_options(
   ${CMAKE_CURRENT_BINARY_DIR}/CaptureGeneral.cfg
   ${CMAKE_CURRENT_BINARY_DIR}/CaptureFrame.cfg
+  ${CMAKE_CURRENT_BINARY_DIR}/Capture2DFrame.cfg
 )
 add_dependencies(${PROJECT_NAME}_gencfg ${GENERATOR_TARGET_NAME})
 add_service_files(
@@ -75,6 +79,7 @@ add_service_files(
   srv
   FILES
   Capture.srv
+  Capture2D.srv
   CameraInfoModelName.srv
   CameraInfoSerialNumber.srv
   IsConnected.srv
