--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -43,6 +43,7 @@ function(register_cpp_sample)
 endfunction()
 
 register_cpp_sample(NAME sample_capture_cpp SRC src/sample_capture.cpp)
+register_cpp_sample(NAME sample_capture_2d_cpp SRC src/sample_capture_2d.cpp)
 
 ####################
 ## Python Samples ##
@@ -63,6 +64,7 @@ function(register_python_sample)
 endfunction()
 
 register_python_sample(SRC scripts/sample_capture.py)
+register_python_sample(SRC scripts/sample_capture_2d.py)
 
 ####################
 ## Launch scripts ##
