Add Capture Assistant support
Adding a new service "capture_assistant/suggest_settings" which runs the
CA and then configures all the dynamic_reconfigure servers with the
suggested settings. After this service has been called, the user can call
"capture" to trigger an actual 3D capture. This is analogous to how the
C++ API works.

The service takes both max_capture_time and ambient_light_frequency as
parameters.

Added samples for CPP and Python.

Use sample_capture_assistant.py under Getting started because it will
give a better first impression of the camera.

Bump minimum required Zivid SDK version to 1.7.0.

Added some tests for Capture Assistant. However, due to CA failing when
using the file camera on SDK 1.7.0 almost all of the CA tests are disabled
for now. CA with FileCamera will work on SDK 1.8.0. These tests will be
enabled when minimum SDK is bumped to 1.8.0. See issue 10.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -30,7 +30,7 @@ find_package(catkin REQUIRED COMPONENTS
   nodelet
 )
 
-find_package(Zivid 1.6.0 COMPONENTS Core REQUIRED)
+find_package(Zivid 1.7.0 COMPONENTS Core REQUIRED)
 message(STATUS "Found Zivid version ${Zivid_VERSION}")
 
 find_package(OpenMP REQUIRED)
@@ -80,6 +80,7 @@ add_service_files(
   FILES
   Capture.srv
   Capture2D.srv
+  CaptureAssistantSuggestSettings.srv
   CameraInfoModelName.srv
   CameraInfoSerialNumber.srv
   IsConnected.srv
