--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -44,6 +44,7 @@ endfunction()
 
 register_cpp_sample(NAME sample_capture_cpp SRC src/sample_capture.cpp)
 register_cpp_sample(NAME sample_capture_2d_cpp SRC src/sample_capture_2d.cpp)
+register_cpp_sample(NAME sample_capture_assistant_cpp SRC src/sample_capture_assistant.cpp)
 
 ####################
 ## Python Samples ##
@@ -65,6 +66,7 @@ endfunction()
 
 register_python_sample(SRC scripts/sample_capture.py)
 register_python_sample(SRC scripts/sample_capture_2d.py)
+register_python_sample(SRC scripts/sample_capture_assistant.py)
 
 ####################
 ## Launch scripts ##
