--- a/zivid_camera/package.xml
+++ b/zivid_camera/package.xml
@@ -3,12 +3,12 @@
   <name>zivid_camera</name>
   <version>1.0.0</version>
   <description>Driver for using the Zivid 3D cameras in ROS.</description>
-  <maintainer email="support@zivid.com">Zivid</maintainer>
+  <maintainer email="customersuccess@zivid.com">Zivid</maintainer>
   <license>BSD3</license>
   <url type="website>">https://zivid.com</url>
   <url type="repository">https://github.com/zivid/zivid-ros</url>
   <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>
-  <author email="support@zivid.com">Zivid</author>
+  <author email="customersuccess@zivid.com">Zivid</author>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
