--- a/zivid_samples/package.xml
+++ b/zivid_samples/package.xml
@@ -6,7 +6,7 @@
   use of the zivid_camera package.</description>
   <maintainer email="customersuccess@zivid.com">Zivid</maintainer>
   <license>BSD3</license>
-  <url type="website>">https://zivid.com</url>
+  <url type="website">https://zivid.com</url>
   <url type="repository">https://github.com/zivid/zivid-ros</url>
   <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>
   <buildtool_depend>catkin</buildtool_depend>
