settings_generator: Speed up build by not modifying unchanged files
The settings_generator step produces some .cfg files and header
files which is used by the zivid_camera library. The generator
would always overwrite the output files, even if the contents was
identical to before. This would cause an unnecessary rebuild
of the zivid_camera node.

Instead, we can check if the file contents are different before
modifying the output file. This will significantly speed up
subsequent builds without changes to settings_generator output.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -30,6 +30,8 @@ find_package(catkin REQUIRED COMPONENTS
   nodelet
 )
 
+find_package(Boost REQUIRED COMPONENTS filesystem)
+
 find_package(Zivid 1.8.0 COMPONENTS Core REQUIRED)
 message(STATUS "Found Zivid version ${Zivid_VERSION}")
 
@@ -45,7 +47,7 @@ target_include_directories(
   SYSTEM PRIVATE
   ${catkin_INCLUDE_DIRS}
 )
-target_link_libraries(${SETTINGS_GENERATOR_TARGET_NAME} PRIVATE Zivid::Core)
+target_link_libraries(${SETTINGS_GENERATOR_TARGET_NAME} PRIVATE Zivid::Core Boost::filesystem)
 
 
 set(GENERATOR_TARGET_NAME ${PROJECT_NAME}_generator)
