Add testing of Ubuntu 20 in CI
Also update compiler test matrix for U18. We want to test the default
g++ or clang++ for each distro, as well as the newer versions available
on each distro. Previously we did not test default clang++ on Ubuntu
18. This clang++ (v6) seems to not support the return-std-move-in-c++11
warning, so this must be handled in CompilerWarnings.cmake.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,20 @@ stages:
         vmImage: ubuntu-16.04
       steps:
       - script: 'CI_TEST_OS=ros:melodic-ros-base-bionic ./continuous-integration/run_code_analysis_in_docker.sh'
+  - stage: Build_And_Test_Newest_Zivid_Noetic
+    jobs:
+    - template: continuous-integration/azure-pipelines/templates/build_and_test.yml
+      parameters:
+        zivid_versions: ["${{ variables['newest_zivid_version'] }}"]
+        ros_distros: ['ros:noetic-ros-base-focal']
+        compilers: ['g++', 'clang++', 'g++-10', 'g++-11', 'clang++-11', 'clang++-12']
   - stage: Build_And_Test_Newest_Zivid_Melodic
     jobs:
     - template: continuous-integration/azure-pipelines/templates/build_and_test.yml
       parameters:
         zivid_versions: ["${{ variables['newest_zivid_version'] }}"]
         ros_distros: ['ros:melodic-ros-base-bionic']
-        compilers: ['g++-7', 'g++-8', 'g++-9', 'clang++-7']
+        compilers: ['g++', 'clang++', 'g++-8', 'g++-9', 'clang++-7', 'clang++-8']
   - stage: Build_And_Test_Newest_Zivid_Kinetic
     jobs:
     - template: continuous-integration/azure-pipelines/templates/build_and_test.yml
