Add support for loading capture settings via YML file
Two new services are added, load_settings_from_file
and load_settings_2d_from_file. Both take a full_path parameter to a
.yml file that contains Settings or Settings2D and applies them to the
ROS driver.

Co-Written-By: Daniel Cranston <daniel.cranston@ascent.ai>

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -86,6 +86,8 @@ add_service_files(
   Capture.srv
   Capture2D.srv
   CaptureAssistantSuggestSettings.srv
+  LoadSettingsFromFile.srv
+  LoadSettings2DFromFile.srv
   CameraInfoModelName.srv
   CameraInfoSerialNumber.srv
   IsConnected.srv
