--- a/zivid_description/CMakeLists.txt
+++ b/zivid_description/CMakeLists.txt
@@ -1,5 +1,11 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(zivid_description)
+
 find_package(catkin REQUIRED COMPONENTS)
+
 catkin_package()
-include_directories(${catkin_INCLUDE_DIRS})
+
+install(
+    DIRECTORY config launch meshes urdf
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
