--- a/.github/workflows/ROS-commit.yml
+++ b/.github/workflows/ROS-commit.yml
@@ -7,7 +7,7 @@ on:
     - cron:  '0 22 * * *'
 
 env:
-  NEWEST_ZIVID_VERSION: '2.6.0+fa0036c5-1'
+  NEWEST_ZIVID_VERSION: '2.6.1+6cec8609-3'
 
 jobs:
   code-analysis:
@@ -92,7 +92,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        zivid-version: ['2.5.0+19fa6891-1']
+        zivid-version: ['2.5.0+19fa6891-1', '2.6.0+fa0036c5-1']
         ros-distro: ['ros:noetic-ros-base-focal', 'ros:kinetic-ros-base-xenial', 'ros:melodic-ros-base-bionic']
     steps:
       - name: Check out code
