--- a/.github/workflows/ROS-commit.yml
+++ b/.github/workflows/ROS-commit.yml
@@ -21,9 +21,8 @@ jobs:
       - name: Run code_analysis.sh
         run: |
           CI_TEST_OS=ros:melodic-ros-base-bionic \
-          ./continuous-integration/run_code_analysis_in_docker.sh
+          ./continuous-integration/run_code_analysis_in_docker.sh && false
       - name: Notify Teams
-        if: ${{ failure() && github.ref == 'refs/heads/master' }}
         env:
           CI_FAILURE_TEAMS_HOOK: ${{ secrets.CI_FAILURE_TEAMS_HOOK }}
         run: python continuous-integration/notify_teams.py --status ${{ job.status }}
@@ -59,7 +58,7 @@ jobs:
           lfs: false
       - name: Build and Test
         run: |
-          CI_TEST_ZIVID_VERSION=${{ env.NEWEST_ZIVID_VERSION }} \
+          false && CI_TEST_ZIVID_VERSION=${{ env.NEWEST_ZIVID_VERSION }} \
           CI_TEST_OS=${{ matrix.os }} \
           CI_TEST_COMPILER=${{ matrix.compiler }} \
           ./continuous-integration/run_build_and_test_in_docker.sh
@@ -99,7 +98,7 @@ jobs:
           lfs: false
       - name: Build and Test
         run: |
-          CI_TEST_ZIVID_VERSION=${{ matrix.zivid-version }} \
+          false && CI_TEST_ZIVID_VERSION=${{ matrix.zivid-version }} \
           CI_TEST_OS=${{ matrix.ros-distro }} \
           CI_TEST_COMPILER="g++-7" \
           ./continuous-integration/run_build_and_test_in_docker.sh
