--- a/.github/workflows/ROS-commit.yml
+++ b/.github/workflows/ROS-commit.yml
@@ -7,7 +7,7 @@ on:
     - cron:  '0 22 * * *'
 
 env:
-  NEWEST_ZIVID_VERSION: '2.8.0+891708ba-1'
+  NEWEST_ZIVID_VERSION: '2.8.1+dd4dffea-1'
 
 jobs:
   code-analysis:
@@ -90,7 +90,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        zivid-version: ['2.5.0+19fa6891-1', '2.6.0+fa0036c5-1', '2.6.1+6cec8609-3', '2.7.0+e31dcbe2-1']
+        zivid-version: ['2.5.0+19fa6891-1', '2.6.0+fa0036c5-1', '2.6.1+6cec8609-3', '2.7.0+e31dcbe2-1', '2.8.0+891708ba-1']
         ros-distro: ['ros:noetic-ros-base-focal', 'ros:melodic-ros-base-bionic']
     steps:
       - name: Check out code
