Example of how to add projection to zivid-ros driver
This is an example of how to add projection in ROS driver.
This is considered unofficial and experimental.

To get official support for this in the driver, we need to implement
a way of passing the image via the ProjectImageStart service.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -88,6 +88,8 @@ add_service_files(
   CaptureAssistantSuggestSettings.srv
   LoadSettingsFromFile.srv
   LoadSettings2DFromFile.srv
+  ProjectImageStart.srv
+  ProjectImageStop.srv
   CameraInfoModelName.srv
   CameraInfoSerialNumber.srv
   IsConnected.srv
